auth controller swagger imlemented
